[package]
name = "mktorrent-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bendy = "0.3.3"
clap = { version = "3.1.15", features = ["derive"] }
indicatif = "0.16"
rayon = "1.5"
ring = "0.16.20"
walkdir = "2.3"

[profile.test]
opt-level = 3