[package]
name = "mktorrent-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bendy = "0.3"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
positioned-io = "0.3"
rayon = "1"
ring = "0.17"
walkdir = "2"

[profile.test]
opt-level = 3
